--- a/StarProject/Views/Ticket/_TicketRows.cshtml
+++ b/StarProject/Views/Ticket/_TicketRows.cshtml
@@ -7,7 +7,7 @@
         <div class="card h-100 position-relative shadow cardDetail">
             <!-- 固定圖片大小 -->
             <div class="card-img-container">
-                <img src="@Html.DisplayFor(modelItem => item.TicImage)" class="card-img-top" alt="景點照片">
+                <img src="@Html.DisplayFor(modelItem => item.TicImage)" class="card-img-top" alt="景點照片" />
             </div>
 
             <!-- flex-column 讓內容上下排列 -->
